@@ -1,14 +1,14 @@
 Package: recosystem
 Type: Package
 Title: Recommender System using Matrix Factorization
-Version: 0.4.3
-Date: 2020-05-17
+Version: 0.4.4
+Date: 2021-01-09
 Author: Yixuan Qiu, Chih-Jen Lin, Yu-Chin Juan, Wei-Sheng Chin,
     Yong Zhuang, Bo-Wen Yuan, Meng-Yuan Yang, and other
     contributors. See file AUTHORS for details.
 Maintainer: Yixuan Qiu <yixuan.qiu@cos.name>
 Description: R wrapper of the 'libmf' library
-    <http://www.csie.ntu.edu.tw/~cjlin/libmf/> for recommender
+    <https://www.csie.ntu.edu.tw/~cjlin/libmf/> for recommender
     system using matrix factorization. It is typically used to
     approximate an incomplete matrix using the product of two
     matrices in a latent space. Other common names for this task
@@ -25,8 +25,8 @@ Imports: Rcpp (>= 0.11.0)
 Suggests: knitr, prettydoc
 LinkingTo: Rcpp, RcppProgress
 VignetteBuilder: knitr
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.1
 NeedsCompilation: yes
-Packaged: 2020-05-18 00:13:18 UTC; qyx
+Packaged: 2021-01-09 04:12:50 UTC; qyx
 Repository: CRAN
-Date/Publication: 2020-05-18 04:50:07 UTC
+Date/Publication: 2021-01-10 05:10:05 UTC
