@@ -1,20 +1,20 @@
-0d71ffcd52fd90bfa4fab5d0570195bb *DESCRIPTION
+a986bc09e8768b53ecd9f9c3ffd9da00 *DESCRIPTION
 cc4a0543a8648a70e9cab06b0cd241e8 *LICENSE
 48b28bc8021b054c031400a0495ac4fb *NAMESPACE
 fd45d261937aa156940e51277132d7ba *R/DataSource.R
 7484085fa7367be13a13f638baf73957 *R/Output.R
 d110dbce50f0dc559b5017f4a2c8815e *R/RecoModel.R
 e7641d7bf39fe5379e361ebe3d15545a *R/RecoSys.R
-b319469a7016df0acd4fecb6986e1677 *README.md
-b72de9c2fee9d72960d39c0047e71d41 *build/vignette.rds
-1a58a8c8fac6db66cf2ab410ea430c42 *inst/AUTHORS
+7893da3231810a7fecaff6b2a664b79c *README.md
+faf536dc346dd8b911958812027058ff *build/vignette.rds
+589dd0ea6be44e5b44d8222ae90d1805 *inst/AUTHORS
 93d41f14379d164378e12a2da46ca87d *inst/COPYRIGHTS
-fe7eeecd063bb1761372031c0e69f645 *inst/NEWS.Rd
+0a5836e7acb085d75744b8c4c195bddb *inst/NEWS.Rd
 b6c39d661d25cc1f37f95f2280525104 *inst/dat/smalltest.txt
 d9e88b463350a2014e23447e141b6d3f *inst/dat/smalltrain.txt
 a49b0666d5823ea749e6b9f55ae8b389 *inst/doc/introduction.R
-d3a12dc647adf745c276756adb01c380 *inst/doc/introduction.Rmd
-b6d243d016674f3ce8ee74dcfb5f63d5 *inst/doc/introduction.html
+eee59423511341d1de80bb69e2196d18 *inst/doc/introduction.Rmd
+122ebb7a78da6ad2f76dfd0d9becc458 *inst/doc/introduction.html
 e1e442e05d598296326ccd75017fb127 *man/Reco.Rd
 bbeebd65b7088cdd97a70bc63fb46568 *man/data_source.Rd
 54f0128af22888d0aa0ef18d49d0a125 *man/output.Rd
@@ -32,7 +32,7 @@ a32a51bf630f1df5b1ff0528e73ec514 *src/reco-predict.cpp
 50e120fb21a84795e3b76b2172cdceb7 *src/reco-read-data.h
 a4f01eb44a1d2fde0a566416af3aea31 *src/reco-train.cpp
 a99936eeb272501a59f7ec49149cea32 *src/reco-tune.cpp
-a9cf748b2544a3bf7c2a9f837334d429 *src/reco-utils.h
+7ae12dd7ded6d5234694d5b70cb66a89 *src/reco-utils.h
 9dcb2ca216bb88a6840f40b9118fa5db *src/register_routines.c
 b8013516aad8c520255599c8456754d4 *src/register_routines.h
-d3a12dc647adf745c276756adb01c380 *vignettes/introduction.Rmd
+eee59423511341d1de80bb69e2196d18 *vignettes/introduction.Rmd
