@@ -12,7 +12,7 @@
 
 <meta name="author" content="Yixuan Qiu" />
 
-<meta name="date" content="2020-05-17" />
+<meta name="date" content="2021-01-09" />
 
 <title>recosystem: Recommender System Using Parallel Matrix Factorization</title>
 
@@ -26,6 +26,22 @@ document.addEventListener('DOMContentLoaded', function(e) {
     if (!/^h[1-6]$/i.test(h.tagName)) continue;  // it should be a header h1-h6
     a = h.attributes;
     while (a.length > 0) h.removeAttribute(a[0].name);
+  }
+});
+</script>
+<script>// Hide empty <a> tag within highlighted CodeBlock for screen reader accessibility (see https://github.com/jgm/pandoc/issues/6352#issuecomment-626106786) -->
+// v0.0.1
+// Written by JooYoung Seo (jooyoung@psu.edu) and Atsushi Yasumoto on June 1st, 2020.
+
+document.addEventListener('DOMContentLoaded', function() {
+  const codeList = document.getElementsByClassName("sourceCode");
+  for (var i = 0; i < codeList.length; i++) {
+    var linkList = codeList[i].getElementsByTagName('a');
+    for (var j = 0; j < linkList.length; j++) {
+      if (linkList[j].innerHTML === "") {
+        linkList[j].setAttribute('aria-hidden', 'true');
+      }
+    }
   }
 });
 </script>
@@ -142,7 +158,7 @@ a.sourceLine {
 <section class="page-header">
 <h1 class="title toc-ignore project-name">recosystem: Recommender System Using Parallel Matrix Factorization</h1>
 <h4 class="author project-author">Yixuan Qiu</h4>
-<h4 class="date project-date">2020-05-17</h4>
+<h4 class="date project-date">2021-01-09</h4>
 </section>
 
 
@@ -154,7 +170,7 @@ a.sourceLine {
 -->
 <div id="about-recosystem-package" class="section level2">
 <h2>About recosystem Package</h2>
-<p><code>recosystem</code> is an R wrapper of the <code>LIBMF</code> library developed by Yu-Chin Juan, Wei-Sheng Chin, Yong Zhuang, Bo-Wen Yuan, Meng-Yuan Yang, and Chih-Jen Lin (<a href="http://www.csie.ntu.edu.tw/~cjlin/libmf/" class="uri">http://www.csie.ntu.edu.tw/~cjlin/libmf/</a>), an open source library for recommender system using parallel marix factorization. <span class="citation">(Chin, Yuan, et al. 2015)</span></p>
+<p><code>recosystem</code> is an R wrapper of the <code>LIBMF</code> library developed by Yu-Chin Juan, Wei-Sheng Chin, Yong Zhuang, Bo-Wen Yuan, Meng-Yuan Yang, and Chih-Jen Lin (<a href="https://www.csie.ntu.edu.tw/~cjlin/libmf/" class="uri">https://www.csie.ntu.edu.tw/~cjlin/libmf/</a>), an open source library for recommender system using parallel marix factorization. <span class="citation">(Chin, Yuan, et al. 2015)</span></p>
 </div>
 <div id="highlights-of-libmf-and-recosystem" class="section level2">
 <h2>Highlights of LIBMF and recosystem</h2>
@@ -390,7 +406,7 @@ a.sourceLine {
 <div class="sourceCode" id="cb8"><pre class="sourceCode r"><code class="sourceCode r"><span id="cb8-1"><a href="#cb8-1"></a><span class="co">## Write predictions to file</span></span>
 <span id="cb8-2"><a href="#cb8-2"></a>pred_file =<span class="st"> </span><span class="kw">tempfile</span>()</span>
 <span id="cb8-3"><a href="#cb8-3"></a>r<span class="op">$</span><span class="kw">predict</span>(test_set, <span class="kw">out_file</span>(pred_file))</span></code></pre></div>
-<pre><code>## prediction output generated at /tmp/Rtmplnv6gx/file90f1d38c7bf</code></pre>
+<pre><code>## prediction output generated at /tmp/Rtmp12XMo1/file4463d467d3c</code></pre>
 <div class="sourceCode" id="cb10"><pre class="sourceCode r"><code class="sourceCode r"><span id="cb10-1"><a href="#cb10-1"></a><span class="kw">print</span>(<span class="kw">scan</span>(pred_file, <span class="dt">n =</span> <span class="dv">10</span>))</span></code></pre></div>
 <pre><code>##  [1] 3.76629 2.85805 3.13870 3.22261 2.88342 2.93686 2.71680 2.96046 2.78316
 ## [10] 3.65474</code></pre>
@@ -407,12 +423,12 @@ a.sourceLine {
 <p>Also, there are some flags in file <code>src/Makevars</code> (<code>src/Makevars.win</code> for Windows system) that may have influential effect on performance. It is strongly suggested to set proper flags according to your type of CPU before compiling the package, in order to achieve the best performance:</p>
 <ol style="list-style-type: decimal">
 <li>The default <code>Makevars</code> provides generic options that should apply to most CPUs.</li>
-<li>If your CPU supports SSE3 (<a href="http://en.wikipedia.org/wiki/SSE3">a list of supported CPUs</a>), add</li>
+<li>If your CPU supports SSE3 (<a href="https://en.wikipedia.org/wiki/SSE3">a list of supported CPUs</a>), add</li>
 </ol>
 <pre><code>PKG_CPPFLAGS += -DUSESSE
 PKG_CXXFLAGS += -msse3</code></pre>
 <ol start="3" style="list-style-type: decimal">
-<li>If not only SSE3 is supported but also AVX (<a href="http://en.wikipedia.org/wiki/Advanced_Vector_Extensions">a list of supported CPUs</a>), add</li>
+<li>If not only SSE3 is supported but also AVX (<a href="https://en.wikipedia.org/wiki/Advanced_Vector_Extensions">a list of supported CPUs</a>), add</li>
 </ol>
 <pre><code>PKG_CPPFLAGS += -DUSEAVX
 PKG_CXXFLAGS += -mavx</code></pre>
@@ -425,10 +441,10 @@ PKG_CXXFLAGS += -mavx</code></pre>
 <p>Chin, Wei-Sheng, Bo-Wen Yuan, Meng-Yuan Yang, Yong Zhuang, Yu-Chin Juan, and Chih-Jen Lin. 2015. “LIBMF: A Library for Parallel Matrix Factorization in Shared-Memory Systems.” <a href="https://www.csie.ntu.edu.tw/~cjlin/papers/libmf/libmf_open_source.pdf">https://www.csie.ntu.edu.tw/~cjlin/papers/libmf/libmf_open_source.pdf</a>.</p>
 </div>
 <div id="ref-FPSG2015">
-<p>Chin, Wei-Sheng, Yong Zhuang, Yu-Chin Juan, and Chih-Jen Lin. 2015a. “A Fast Parallel Stochastic Gradient Method for Matrix Factorization in Shared Memory Systems.” <em>ACM TIST</em>. <a href="http://www.csie.ntu.edu.tw/~cjlin/papers/libmf/libmf_journal.pdf">http://www.csie.ntu.edu.tw/~cjlin/papers/libmf/libmf_journal.pdf</a>.</p>
+<p>Chin, Wei-Sheng, Yong Zhuang, Yu-Chin Juan, and Chih-Jen Lin. 2015a. “A Fast Parallel Stochastic Gradient Method for Matrix Factorization in Shared Memory Systems.” <em>ACM TIST</em>. <a href="https://www.csie.ntu.edu.tw/~cjlin/papers/libmf/libmf_journal.pdf">https://www.csie.ntu.edu.tw/~cjlin/papers/libmf/libmf_journal.pdf</a>.</p>
 </div>
 <div id="ref-LRSG">
-<p>———. 2015b. “A Learning-Rate Schedule for Stochastic Gradient Methods to Matrix Factorization.” <em>PAKDD</em>. <a href="http://www.csie.ntu.edu.tw/~cjlin/papers/libmf/mf_adaptive_pakdd.pdf">http://www.csie.ntu.edu.tw/~cjlin/papers/libmf/mf_adaptive_pakdd.pdf</a>.</p>
+<p>———. 2015b. “A Learning-Rate Schedule for Stochastic Gradient Methods to Matrix Factorization.” <em>PAKDD</em>. <a href="https://www.csie.ntu.edu.tw/~cjlin/papers/libmf/mf_adaptive_pakdd.pdf">https://www.csie.ntu.edu.tw/~cjlin/papers/libmf/mf_adaptive_pakdd.pdf</a>.</p>
 </div>
 </div>
 </div>
